# magic-garden

./: .gitignore  DOM_MIGRATION_PLAN.md  LICENSE  README.md  config.json  magic-garden.spec  main.py  pyproject.toml  requirements-windows.txt  requirements.txt
.github/workflows/: release.yml
docs/: architecture.md
src/: __init__.py  auto_buyer.py  config.py  dom_capture.py  gui.py  screen_capture.py
