[project]
name = "magic-garden"
version = "0.1.0"
description = "Auto-buyer bot for Magic Garden mythical eggs and seeds"
requires-python = ">=3.11"
dependencies = [
    "pyautogui>=0.9.54",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "pynput>=1.7.6",
    "pytesseract>=0.3.10",
    "torch",
    "torchvision",
    "easyocr>=1.7.0",
    "pydirectinput>=1.0.4; sys_platform == 'win32'",
    "pyinstaller>=6.17.0",
]
[project.scripts]
magic-garden = "main:main"

[dependency-groups]
dev = []
[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]